--- a/projetodomme/front-end/css/home.css
+++ b/projetodomme/front-end/css/home.css
@@ -7,29 +7,11 @@ header {
     align-items: center;
 }
 
-.container-header{
-    display: flex;
-    align-items: center;
-    margin: auto;
-    width: 60%;
-    justify-content: space-between;
-}
 
 #imagem-header{
     width: 140px;
     height: 140px;
-}
-
-#btnBuscar img{
-    width: 13px;
-    height: 13px;
-}
-
-
-.titulo-header{
-    display: block;
-    font-size: 30px;
-    color: white;
+    justify-content: center;
 }
 
 .navegacao ul{
