--- a/projetodomme/front-end/css/cadastro.css
+++ b/projetodomme/front-end/css/cadastro.css
@@ -23,6 +23,7 @@ section{
     align-items: center;
     display: flex;
     justify-content: center;
+    height: 100vh;
 }
 
 form{
@@ -45,60 +46,70 @@ label{
     width: 75%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-idade{
     width: 20%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-cpf{
     width: 45%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-sexo{
     width: 30%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-nasc{
     width: 30%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-cid{
     width: 50%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-rua{
     width: 50%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-numero{
     width: 10%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-cep{
     width: 35%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #input-telefone{
     width: 35%;
     padding: 5px;
     border-radius: 10px;
+    border: none;
 }
 
 #btn-cadastrar{
@@ -122,6 +133,7 @@ label{
     display: flex;
     justify-content: center;
     align-items:flex-end;
+    height: 100vh;
 }
 
 .div-image{
