--- a/projetodomme/front-end/css/home.css
+++ b/projetodomme/front-end/css/home.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
     width: 100%;
     height: 200px;
