--- a/projetodomme/front-end/css/cadastroquarto.css
+++ b/projetodomme/front-end/css/cadastroquarto.css
@@ -17,11 +17,10 @@ main {
 
 .section-form{
     width: 50vw;
-    background-color: #d9d9d9;
     align-items: center;
     display: flex;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
 }
 
 label{
@@ -30,10 +29,8 @@ label{
 }
 
 #form-cadastro-quarto{
-    border-radius: 20px;
     width: 45vw;
-    padding: 0px 15px;
-    box-shadow: 0px 0px 30px #fff;
+    padding: 20px 30px;
 }
 
 #form-cadastro-quarto>input{
@@ -42,7 +39,7 @@ label{
     padding: 10px 5px;
     outline: none;
     border-radius: 10px;
-    border: none;
+    border: 1px black solid;
 }
 
 #tipos-quartos{
@@ -51,7 +48,7 @@ label{
     padding: 10px 5px;
     outline: none;
     border-radius: 10px;
-    border: none;
+    border: 1px black solid;
 }
 
 #input-nome{
