--- a/projetodomme/front-end/css/cadastrocliente.css
+++ b/projetodomme/front-end/css/cadastrocliente.css
@@ -80,7 +80,7 @@ label{
     width: 35%;
 }
 
-#btn-cadastro{
+#btn-cadastro, #btn-cancelar{
     width: 35%;
     background-color: #931112;
     padding: 16px 0px;
