integracao tela de cadastro de quarto e de pesquisa de quarto com API

--- a/projetodomme/front-end/css/cadastrocliente.css
+++ b/projetodomme/front-end/css/cadastrocliente.css
@@ -81,7 +81,7 @@ label{
 }
 
 #btn-cadastro, #btn-cancelar{
-    width: 35%;
+    width: 11vw;
     background-color: #931112;
     padding: 16px 0px;
     cursor: pointer;
