--- a/projetodomme/front-end/css/login.css
+++ b/projetodomme/front-end/css/login.css
@@ -53,7 +53,7 @@
     justify-content: center;
 }
 
-.form-login{
+#form-login{
     width: 60%;
     display: flex;
     flex-direction: column;
@@ -64,7 +64,7 @@
     box-shadow: 0px 0px 30px #fff;
 }
 
-.form-login > img{
+#form-login > img{
     width: 70px;
     margin-bottom: 10px;
 }
@@ -100,7 +100,7 @@
     color: #931112;
 }
 
-.btn-login {
+#btn-login {
     width: 100%;
     padding: 16px 0px;
     margin: 25px;
