--- a/projetodomme/front-end/css/cadastroquarto.css
+++ b/projetodomme/front-end/css/cadastroquarto.css
@@ -5,13 +5,50 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* main */
-
-/* parte esquerda */
-
-main {
+/*Header*/
+header {
+    width: 100%;
+    height: 200px;
     display: flex;
-    font-size: 18px;
+    flex-direction: column;
+    background-color: #212121;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#imagem-header{
+    width: 140px;
+    height: 140px;
+    justify-content: center;
+    align-items: center;
+}
+
+.navegacao ul{
+    display: flex;
+
+}
+
+.navegacao li {
+    margin: 10px 25px;
+    font-size: 20px;
+}
+
+.navegacao a{
+    color: #e6e6e6;
+    text-decoration: none;
+}
+
+
+/* main */
+main {
+    width: 100%;
+    padding: 20px 0;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    background-color: #e6e6e6;
+    align-items: center;
 }
 
 
@@ -20,7 +57,10 @@ main {
     align-items: center;
     display: flex;
     justify-content: center;
-    height: 100%;
+    height: 80%;
+    background-color: #212121;
+    border-radius: 10px;
+    color: #e6e6e6;
 }
 
 label{
@@ -30,11 +70,11 @@ label{
 
 #form-cadastro-quarto{
     width: 45vw;
-    padding: 20px 30px;
+    padding: 20px 30px;;
 }
 
 #form-cadastro-quarto>input{
-    display: block;
+
     margin-bottom: 8px;
     padding: 10px 5px;
     outline: none;
@@ -49,18 +89,18 @@ label{
     outline: none;
     border-radius: 10px;
     border: 1px black solid;
+    width: 20%;
+    text-align: center;
 }
 
 #input-nome{
     width: 75%;
+    text-align: center;
 }
 
 #input-numero{
-    width: 10%;
-}
-
-#input-cep{
-    width: 35%;
+    width: 20%;
+    text-align: center;
 }
 
 .botoes-quarto{
@@ -94,41 +134,39 @@ label{
     border: none;
 }
 
-/* parte direita */ 
+/*Footer*/
 
-.section-image{
-    width: 50vw;
-    height: 100vh;
-    background-color: black;
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: #212121;
     display: flex;
-    justify-content: center;
-    align-items:flex-end;
-    height: 100vh;
-}
-
-.div-image{
-    flex-direction: column;
-    display: flex;
-    justify-content: space-between;
-    height: 75%;
     align-items: center;
 }
 
-.div-image>img{
-    width: 250px;
+.container-footer img{
+    width: 70px;
+    height: 70px;
 }
 
+.container-footer span{
+    color: #e6e6e6;
+}
 
-.links-cadastro{
+.container-footer{
+    width: 80%;
     display: flex;
-    list-style: none;
     justify-content: space-between;
-    padding-bottom: 15px;
+    margin: auto;
+    align-items: center;
 }
 
+.logo-nome{
+    display: flex;
+    align-items: center;
+}
 
-.links-a>a{
-    margin: 0px 20px;
-    color: #ffffff;
-    text-decoration: none;;
+.container-footer a{
+    text-decoration: none;
+    color: #fff;
 }
