--- a/projetodomme/front-end/css/quartos.css
+++ b/projetodomme/front-end/css/quartos.css
@@ -12,35 +12,9 @@ header {
     height: 200px;
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: #212121;
     align-items: center;
     justify-content: center;
-}
-
-#quartos{
-    margin-top: 50px;
-    width: 95vw;
-    border: black solid 1px;
-    padding: 5px;
-    text-align: center;
-    
-}
-
-
-.input{
-    margin: 10px;
-    border: black solid 1px;
-}
-
-.quarto{
-    margin: 20px 0;
-    border: solid black 1px;
-    padding: 5px;
-    background-color: silver;
-}
-
-.quarto>input{
-    width: 150px;
 }
 
 
@@ -62,7 +36,7 @@ header {
 }
 
 .navegacao a{
-    color: white;
+    color: #e6e6e6;
     text-decoration: none;
 }
 
@@ -74,6 +48,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #e6e6e6;
 
 }
 
@@ -109,12 +84,44 @@ form{
     border: none;
 }
 
+#quartos{
+    margin-top: 50px;
+    width: 95%;
+    border-radius: 10px;
+    padding: 5px;
+    text-align: center;
+    background-color:  #212121;
+    
+}
+
+.quarto{
+    margin: 20px 0;
+    color: #e6e6e6;
+    padding: 5px;
+    background-color: #4a4a4a;
+    border-radius: 10px;
+    transition: 0.2s;
+    opacity: 80%;
+}
+
+.quarto:hover{
+    opacity: 100%;
+    font-size: 17px;
+}
+
+.quarto>input, .quarto>label{
+    width: 10%;
+    border-radius: 10px;
+    text-align: center;
+}
+
+
 /* Footer */
 
 footer{
     width: 100%;
     height: 100px;
-    background-color: black;
+    background-color: #212121;
     display: flex;
     align-items: center;
 }
@@ -125,7 +132,7 @@ footer{
 }
 
 .container-footer span{
-    color: #fff;
+    color: #e6e6e6;
 }
 
 .container-footer{
