--- a/projetodomme/front-end/css/clientes.css
+++ b/projetodomme/front-end/css/clientes.css
@@ -5,35 +5,75 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* main */
+/* Header */
 
-/* parte esquerda */
-
-main {
-    box-sizing: border-box;
+header {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    background-color: #212121;
+    align-items: center;
+    justify-content: center;
 }
+
+
+#imagem-header{
+    width: 140px;
+    height: 140px;
+    justify-content: center;
+    align-items: center;
+}
+
+.navegacao ul{
+    display: flex;
+
+}
+
+.navegacao li {
+    margin: 10px 25px;
+    font-size: 20px;
+}
+
+.navegacao a{
+    color: #e6e6e6;
+    text-decoration: none;
+}
+
+/* Main */
+main {
+    width: 100%;
+    padding: 20px 0;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #e6e6e6;
+
+}
+
 
 form{
     width: 30%;
-    height: 8%;
     display: flex;
 }
 
 #pesq{
-    display: block;
     margin: 10px;
-    padding: 5px;
-    border-radius: 10px;
-    border: 1px #a8a8a8 solid;
     width: 70%;
     font-size: 12pt;
+    padding: 10px 5px;
+    outline: none;
+    border-radius: 10px;
+    border: 1px black solid;
+    text-align: center;
 
 }
 
 #btn{
-    width: 10vw;
+    width: 40%;
     background-color: #931112;
-    padding: 8px 10px;
+    padding: 10px 5px;
     cursor: pointer;
     color: #ffffff;
     border-radius: 8px;
@@ -42,4 +82,41 @@ form{
     text-transform: uppercase;
     margin: 10px;
     border: none;
+}
+
+/* Footer */
+
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: #212121;
+    display: flex;
+    align-items: center;
+}
+
+.container-footer img{
+    width: 70px;
+    height: 70px;
+}
+
+.container-footer span{
+    color: #e6e6e6;
+}
+
+.container-footer{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    align-items: center;
+}
+
+.logo-nome{
+    display: flex;
+    align-items: center;
+}
+
+.container-footer a{
+    text-decoration: none;
+    color: #fff;
 }
