--- a/projetodomme/front-end/css/home.css
+++ b/projetodomme/front-end/css/home.css
@@ -9,7 +9,7 @@ header {
     height: 200px;
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: #212121;
     align-items: center;
     justify-content: center;
 }
@@ -44,11 +44,8 @@ main {
     height: 700px;
     display: flex;
     justify-content: center;
+    background-color: #212121;
 
-}
-
-#home{
-    background-color: black;
 }
 
 .titulo-suite{
@@ -66,7 +63,7 @@ main {
 footer{
     width: 100%;
     height: 100px;
-    background-color: black;
+    background-color: #212121;
     display: flex;
     align-items: center;
 }
