--- a/projetodomme/front-end/css/clientes.css
+++ b/projetodomme/front-end/css/clientes.css
@@ -43,14 +43,68 @@ header {
 /* Main */
 main {
     width: 100%;
-    padding: 20px 0;
-    height: 700px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #e6e6e6;
 
 }
+
+form{
+    width: 30%;
+    height: 8%;
+    display: flex;
+}
+
+
+
+#exibicao-clientes{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.info-gerais{
+    display: none;
+}
+
+#lista{
+    width: 100%;
+    border: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.item {
+    list-style: none;
+    background: #FFFFFF;
+    border-radius: 10px;
+    width: 97%;
+    display: flex;
+    align-items: center;
+    border: 1px solid #000;
+    margin-top: 10px;
+    gap: 1em;
+    font-size: 20px;
+}
+
+p{
+    display: block;
+    width: 17%;
+}
+
+.item strong {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10%;
+    height: 40px;
+    font-weight: bold;
+}
+
 
 
 form{
