--- a/projetodomme/front-end/css/clientes.css
+++ b/projetodomme/front-end/css/clientes.css
@@ -43,73 +43,56 @@ header {
 /* Main */
 main {
     width: 100%;
-    margin-top: 20px;
+    padding: 20px 0;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    background-color: #e6e6e6;
 }
 
-form{
+#form-pesq{
     width: 30%;
-    height: 8%;
     display: flex;
+    margin-bottom: 20px;
 }
 
-
-
-#exibicao-clientes{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15px;
-}
-
-.info-gerais{
-    display: none;
-}
-
-#lista{
-    width: 100%;
-    border: 1px solid #000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.item {
-    list-style: none;
-    background: #FFFFFF;
-    border-radius: 10px;
-    width: 97%;
-    display: flex;
-    align-items: center;
-    border: 1px solid #000;
+#clientes{
     margin-top: 10px;
-    gap: 1em;
-    font-size: 20px;
+    width: 95%;
+    border-radius: 10px;
+    padding: 5px;
+    text-align: center;
+    background-color:  #212121;
+    
 }
 
-p{
-    display: block;
-    width: 17%;
+.cliente{
+    margin: 20px 0;
+    color: #e6e6e6;
+    padding: 5px;
+    background-color: #4a4a4a;
+    border-radius: 10px;
+    transition: 0.2s;
+    opacity: 80%;
+    display: inline-block;
 }
 
-.item strong {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.cliente:hover{
+    opacity: 100%;
+    font-size: 17px;
+}
+
+.cliente>input{
+    width: 11%;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.cliente>label{
     width: 10%;
-    height: 40px;
-    font-weight: bold;
-}
-
-
-
-form{
-    width: 30%;
-    display: flex;
+    border-radius: 10px;
+    text-align: center;
 }
 
 #pesq{
@@ -136,6 +119,15 @@ form{
     text-transform: uppercase;
     margin: 10px;
     border: none;
+}
+
+.btn{
+    background-color:#212121;
+    width: 100px;
+    height: 30px;
+    color: #e6e6e6;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 /* Footer */
