--- a/projetodomme/front-end/css/quartos.css
+++ b/projetodomme/front-end/css/quartos.css
@@ -44,7 +44,7 @@ header {
 main {
     width: 100%;
     padding: 20px 0;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
