Trazendo dados de tabelas para inputs de nova reserva

--- a/projetodomme/front-end/css/pagamento.css
+++ b/projetodomme/front-end/css/pagamento.css
@@ -84,7 +84,7 @@ form{
     margin: 10px;
 }
 
-.form>input{
+.form-pagamento>input{
     margin-bottom: 8px;
     padding: 10px 5px;
     outline: none;
