tela de pagamento 2.0

--- a/projetodomme/front-end/css/pagamento.css
+++ b/projetodomme/front-end/css/pagamento.css
@@ -119,7 +119,11 @@ label{
     width: 15%;
 }
 
-#input-permanencia, #input-consumo, #input-adiantamento{
+#input-permanencia{
+    width: 30%;
+}
+
+#input-consumo, #input-adiantamento{
     width: 20%;
 }
 
